--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <header id="header" class="header container">
     <div class="logo">
-      <a href="/">
+      <a class="logo-link" href="/">
         <img src="./src/img/logo.png" alt="logo">
 
         <div>
@@ -100,7 +100,7 @@
     </div>
 
     <div class="logo-mobile">
-      <a href="/">
+      <a class="logo-mobile-link" href="/">
         <img src="./src/img/logo.png" alt="logo">
         <div class="logo-wrap">
           <h2 class="logo-wrap__title">Громадська організація</h2>
