--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
       <a class="logo-link" href="/">
         <img src="./src/img/logo.png" alt="logo">
 
-        <div>
+        <span>
           <h2>Громадська організація</h2>
           <h1>Шлях до Здоровʼя</h1>
-        </div>
+        </span>
       </a>
 
     </div>
@@ -95,7 +95,7 @@
 
     <div class="lang">
       <a class="lang-localize" href="en">en</a>
-      <span>|</span>
+      <span class="lang-separator"></span>
       <a class="lang-localize" href="ua">ua</a>
     </div>
 
@@ -181,7 +181,7 @@
         <li class="social-icons-list__item">
           <a href="#insta">
             <svg width="24px" height="24px">
-              <use href="./icons.svg#icon-insta"></use>
+              <use href="./icons.svg#icon-insta-mobile"></use>
             </svg>
           </a>
         </li>
@@ -210,7 +210,7 @@
     <div class="contact-email">
       <div>
         <h3 class="contact-email__title">Email</h3>
-        <a class="contacts-email__link" href="mailto:admin@way-to-health.com.ua">admin@way-to-health.com.ua</a>
+        <a class="contact-email__link" href="mailto:admin@way-to-health.com.ua">admin@way-to-health.com.ua</a>
       </div>
     </div>
     </div>
@@ -253,8 +253,8 @@
 
     </div>
 
-    <section class="info">
-      <div class="container">
+    <section class="info container">
+      <div class="info-wrap">
         <h2 class="info-title">Громадська організація “Шлях до Здоров’я”</h2>
         <p class="info-descr">Ми - громадська організація, що віддана меті здорового життя
           та благополуччя нашої спільноти. Наша місія полягає в тому, щоб кожна людина мала доступ до інформації,
@@ -455,20 +455,18 @@
           <a class="footer-nav-item__tel" href="tel:+ 38 097 218 99 13">+ 38 097 218 99 13</a>
           <a class="footer-nav-item__tel" href="tel:+ 38 097 218 99 13">+ 38 097 218 99 13</a>
         </li>
-        <div class="test">
-          <li class="footer-nav-item">
-            <a class="footer-nav-item__link" href="">Про нас</a>
-            <a class="footer-nav-item__link" href="">Команда</a>
-            <a class="footer-nav-item__link" href="">Історія</a>
-            <a class="footer-nav-item__link" href="">Кар’єра</a>
-          </li>
-          <li class="footer-nav-item">
-            <a class="footer-nav-item__link" href="">Документи</a>
-            <a class="footer-nav-item__link" href="">Статут “Я Україна”</a>
-            <a class="footer-nav-item__link" href="">Контакти</a>
-            <a class="footer-nav-item__link" href="">Правила та політика</a>
-          </li>
-        </div>
+        <li class="footer-nav-item">
+          <a class="footer-nav-item__link" href="">Про нас</a>
+          <a class="footer-nav-item__link" href="">Команда</a>
+          <a class="footer-nav-item__link" href="">Історія</a>
+          <a class="footer-nav-item__link" href="">Кар’єра</a>
+        </li>
+        <li class="footer-nav-item">
+          <a class="footer-nav-item__link" href="">Документи</a>
+          <a class="footer-nav-item__link" href="">Статут “Я Україна”</a>
+          <a class="footer-nav-item__link" href="">Контакти</a>
+          <a class="footer-nav-item__link" href="">Правила та політика</a>
+        </li>
         <li class="footer-nav-item">
           <ul class="social-icons footer-icons">
             <h3 class="social-icons-title">Соціальні мережі</h3>
