--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <div class="header-section container">
+  <div class="header-section">
     <ul class="contact-info">
       <li class="contact-info-item">
         <svg width="24px" height="24px">
@@ -71,7 +71,7 @@
     </ul>
   </div>
 
-  <header id="header" class="header container">
+  <header id="header" class="header">
     <div class="logo">
       <a class="logo-link" href="/">
         <img src="./src/img/logo.png" alt="logo">
@@ -263,7 +263,7 @@
           та психічного здоров'я.</p>
         <div class="btns">
           <a class="btn info-btn" href="">Дізнатись більше</a>
-          <a class="btn info-btn" href="">Підтримати нас</a>
+          <a class="info-btn" href="">Підтримати нас</a>
         </div>
       </div>
     </section>
@@ -418,7 +418,7 @@
             <li class="requisites-content-item">
               <p class="requisites-content-item__desc">Посилання на банку:</p>
               <div class="requisites-content-item__container">
-                <h5 class="requisites-content-item__info">
+                <h5 class="requisites-content-item__info -padding">
                   <a href="send.mobobank">send.mobobank</a>
                 </h5>
               </div>
