--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
           та підтримки, необхідних для збереження та покращення свого фізичного
           та психічного здоров'я.</p>
         <div class="btns">
-          <a class="btn info-btn" href="">Дізнатись більше</a>
+          <a class="info-btn" href="">Дізнатись більше</a>
           <a class="info-btn" href="">Підтримати нас</a>
         </div>
       </div>
