--- a/blog.html
+++ b/blog.html
@@ -14,10 +14,11 @@
 
   <link rel="stylesheet" href="./src/styles/hamburgers.css">
   <link rel="stylesheet" href="./dist/main.css">
-  <title>way-to-health</title>
+  <title>Blog</title>
 </head>
 
 <body>
+
   <div class="header-section">
     <ul class="contact-info">
       <li class="contact-info-item">
@@ -86,11 +87,11 @@
 
     <nav class="nav">
       <a class="nav__link" href="./index.html">Головна </a>
-      <a class="nav__link" href="./index.html">Я Українка</a>
+      <a class="nav__link" href="">Я Українка</a>
       <a class="nav__link" href="./blog.html">Блог</a>
-      <a class="nav__link" href="./cotacts.html">Контакти</a>
-      <a class="nav__link" href="./about-us.htmnl">Про нас</a>
-      <a class="nav__link" href="./autobiography.html">Автобіографія</a>
+      <a class="nav__link" href="">Контакти</a>
+      <a class="nav__link" href="">Про нас</a>
+      <a class="nav__link" href="">Автобіографія</a>
     </nav>
 
     <div class="lang">
@@ -140,6 +141,7 @@
         </a>
       </div>
     </div>
+
     <ul class="nav-menu-list">
       <li class="nav-menu-list-item">
         <a class="nav-menu-list-item__link" href="#home">Головна </a>
@@ -215,230 +217,20 @@
     </div>
     </div>
   </header>
-  
-  <main>
-    <!-- slider -->
-    <div class="swiper">
-      <!-- Additional required wrapper -->
-      <div class="swiper-wrapper">
-        <!-- Slides -->
-        <div class="swiper-slide">
-          <img src="./src/img/banner1.png" alt="">
-          <div class="slide-text">
-            <h2>Ми віримо, що зміни починаються з усіх нас!</h2>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <img src="./src/img/banner2.png" alt="">
-          <div class="slide-text">
-            <h2>Українці - вільні люди: дізнайтесь детальніше про наш проєкт</h2>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <div style="position: relative;">
-            <img src="./src/img/banner3.png" alt="">
-            <div class="slide-text">
-              <h2>“Шлях до здоров’я” збирає на допомогу з реабілітації поранених</h2>
-              <a href="донат Way for pay">донат Way for pay</a>
-            </div>
 
-          </div>
-        </div>
-      </div>
-      <!-- If we need pagination -->
-      <div class="swiper-pagination"></div>
-
-      <!-- If we need navigation buttons -->
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-button-next"></div>
-
+  <div class="breadcrumbs">
+    <div class="breadcrumbs-wrap">
+      <a class="breadcrumbs-link" href="">Головна</a>
+      <div class="breadcrumbs-seperator">\</div>
+      <a class="breadcrumbs-link" href="">Блог</a>
     </div>
+  </div>
 
-    <section class="info container">
-      <div class="info-wrap">
-        <h2 class="info-title">Громадська організація “Шлях до Здоров’я”</h2>
-        <p class="info-descr">Ми - громадська організація, що віддана меті здорового життя
-          та благополуччя нашої спільноти. Наша місія полягає в тому, щоб кожна людина мала доступ до інформації,
-          ресурсів
-          та підтримки, необхідних для збереження та покращення свого фізичного
-          та психічного здоров'я.</p>
-        <div class="btns">
-          <a class="info-btn" href="">Дізнатись більше</a>
-          <a class="info-btn" href="">Підтримати нас</a>
-        </div>
-      </div>
-    </section>
-
-    <section class="our-initiatives container">
-      <h2 class="our-initiatives__title">Наші ініціативи</h2>
-      <p class="our-initiatives__descr">Ми розробляємо та реалізуємо різноманітні програми
-        та проекти, спрямовані на покращення ситуації в галузі охорони здоров'я та благополуччя нашого суспільства.
-      </p>
-      <ul class="our-initiatives-list">
-        <li class="our-initiatives-list__item">
-          <img src="./src/img/ou1.jpg" alt="">
-          <div class="our-initiatives-card">
-            <h3 class="our-initiatives-card__title">
-              Проєкт “Українське сонце”
-            </h3>
-            <p class="our-initiatives-card__descr">Проводимо роботу з дітьми
-              та підлітками від 3 до 14 років, навчаємо
-              як надавати першу медичну допомогу, організовуємо патріотичний рух молоді.</p>
-          </div>
-        </li>
-        <li class="our-initiatives-list__item">
-          <img src="./src/img/ou2.jpg" alt="">
-          <div class="our-initiatives-card">
-            <h3 class="our-initiatives-card__title">
-              Проєкт “Я Українка”
-            </h3>
-            <p class="our-initiatives-card__descr"> Це один з наших головних культурних проектів. Ми проводимо
-              патріотичні та культурні заходи в рамках Всеукраїнського фестивалю “Я Українка!” </p>
-          </div>
-        </li>
-        <li class="our-initiatives-list__item">
-          <img src="./src/img/ou3.jpg" alt="">
-          <div class="our-initiatives-card">
-            <h3 class="our-initiatives-card__title">
-              Допомога народу України
-            </h3>
-            <p class="our-initiatives-card__descr">Ми надаємо юридичні послуги, допомога з реабілітації поранених,
-              допомога по господарству, психологічна
-              допомога.</p>
-          </div>
-        </li>
-      </ul>
-      <a class="btn btn-all-projects" href="#">Всі проєкти</a>
-    </section>
-
-    <section class="quotes container">
-      <figure class="quotes-wrap">
-        <q class="quotes-text">
-          &#8220;Тільки тепер я зрозуміла слова Лесі Українки…
-          Щоб не плакати, Я сміялася…&#8221;
-        </q>
-        <div class="author-wrap">
-          <div class="author">Леся Українка</div>
-          <div class="author-text">Українська поетеса</div>
-        </div>
-      </figure>
-    </section>
-
-    <section class="activity">
-      <div class="container">
-        <ul class="activity-list">
-          <li class="activity-list__item">
-            <h3 class="activity-list-title">Історія початку нашої діяльності</h3>
-            <p class="activity-list-descr">Німцович Ємілія Сергіївна в 2014 р. заснувала Г. О. В. О. «Шлях до здорв’я»,
-              працювала
-              керівником, допомагала хворим у відновлені здоров’я.</p>
-            <span><a class="btn btn-more" href="">Дізнатись більше</a></span>
-          </li>
-          <li class="activity__list-item">
-            <img src="./src/img/activity.jpg" alt="">
-          </li>
-        </ul>
-      </div>
-    </section>
-
-    <section class="requisites">
-      <div class="container">
-        <div class="requisites-container">
-          <h3 class="requisites-container__title">Також ви можете підтримати нас фінансово</h3>
-          <p class="requisites-container__descr">Ви можете поповнити банку або скопіювати реквізити
-            та виконати переказ коштів через банк.
-            Для копіювання реквізитів натискайте на іконки.</p>
-        </div>
-        <div class="requisites-wrap">
-
-          <ul class="requisites-content">
-            <span>Реквізити</span>
-            <li class="requisites-content-item">
-              <p class="requisites-content-item__desc">Найменування одержувача:</p>
-              <div class="requisites-content-item__container">
-                <h5 class="requisites-content-item__info">
-                  <svg class="requisites-content-item__icon" width="26px" height="26px">
-                    <use xlink:href="./icons.svg#icon-copy"></use>
-                  </svg>
-                  ГО “Шлях до здоров’я”
-                </h5>
-              </div>
-            </li>
-
-            <li class="requisites-content-item">
-              <p class="requisites-content-item__desc">Код отримувача ЄДРПОУ:</p>
-              <div class="requisites-content-item__container">
-                <h5 class="requisites-content-item__info">
-                  <svg class="requisites-content-item__icon" width="24px" height="24px">
-                    <use xlink:href="./icons.svg#icon-copy"></use>
-                  </svg>
-                  56789976
-                </h5>
-              </div>
-            </li>
-
-            <li class="requisites-content-item">
-              <p class="requisites-content-item__desc">Рахунок в “Приватбанку” (IBAN):</p>
-              <div class="requisites-content-item__container">
-                <h5 class="requisites-content-item__info">
-                  <svg class="requisites-content-item__icon" width="24px" height="24px">
-                    <use xlink:href="./icons.svg#icon-copy"></use>
-                  </svg>
-                  UA383052990000026005015565678
-                </h5>
-              </div>
-            </li>
-
-            <li class="requisites-content-item">
-              <p class="requisites-content-item__desc">Рахунок в “Ощадбанку” (IBAN):</p>
-              <div class="requisites-content-item__container">
-                <h5 class="requisites-content-item__info">
-                  <svg class="requisites-content-item__icon" width="24px" height="24px">
-                    <use xlink:href="./icons.svg#icon-copy"></use>
-                  </svg>
-                  UA383052990000026005015565678
-                </h5>
-              </div>
-            </li>
-
-            <li class="requisites-content-item">
-              <p class="requisites-content-item__desc">Призначення платежу:</p>
-              <div class="requisites-content-item__container">
-                <h5 class="requisites-content-item__info">
-                  <svg class="requisites-content-item__icon" width="24px" height="24px">
-                    <use xlink:href="./icons.svg#icon-copy"></use>
-                  </svg>
-                  Благодійна допомога
-                </h5>
-              </div>
-            </li>
-          </ul>
-
-          <ul class="requisites-content">
-            <span>Банка</span>
-            <li class="requisites-content-item">
-              <p class="requisites-content-item__desc">Посилання на банку:</p>
-              <div class="requisites-content-item__container">
-                <h5 class="requisites-content-item__info -padding">
-                  <a href="send.mobobank">send.mobobank</a>
-                </h5>
-              </div>
-            </li>
-            <li class="requisites-content-item">
-              <p class="requisites-content-item__desc">Номер карти:</p>
-              <div class="requisites-content-item__container">
-                <h5 class="requisites-content-item__info">
-                  <svg class="requisites-content-item__icon" width="24px" height="24px">
-                    <use xlink:href="./icons.svg#icon-copy"></use>
-                  </svg>
-                  5678 8900 7656 7866
-                </h5>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </section>
+  <main>
+    <secton class="blog">
+      
+    </secton>
+    <div class="container"></div>
   </main>
 
   <footer class="footer">
