add new page blog

--- a/blog.html
+++ b/blog.html
@@ -78,15 +78,15 @@
         <img src="./src/img/logo.png" alt="logo">
 
         <span>
-          <h2>Громадська організація</h2>
-          <h1>Шлях до Здоровʼя</h1>
+          <h3>Громадська організація</h3>
+          <h2>Шлях до Здоровʼя</h2>
         </span>
       </a>
 
     </div>
 
     <nav class="nav">
-      <a class="nav__link" href="./index.html">Головна </a>
+      <a class="nav__link" href="./index.html">Головна</a>
       <a class="nav__link" href="">Я Українка</a>
       <a class="nav__link" href="./blog.html">Блог</a>
       <a class="nav__link" href="">Контакти</a>
@@ -220,17 +220,447 @@
 
   <div class="breadcrumbs">
     <div class="breadcrumbs-wrap">
-      <a class="breadcrumbs-link" href="">Головна</a>
-      <div class="breadcrumbs-seperator">\</div>
-      <a class="breadcrumbs-link" href="">Блог</a>
+      <a class="breadcrumbs-link" href="./index.html">Головна</a>
+      <div class="breadcrumbs-wrap__seperator">\</div>
+      <a class="breadcrumbs-link" href="./blog.html">Блог</a>
     </div>
   </div>
 
   <main>
     <secton class="blog">
-      
+      <div class="container">
+        <h2 class="blog__title">Блог</h2>
+        <div class="blog-wrap">
+          <h2 class="blog-wrap__title">Наші проєкти</h2>
+          <p class="blog-wrap__descr">Ми працюємо над багатьма проєктами. На цій сторінці ви детального можете
+            ознайомитись з кожним з них.</p>
+        </div>
+
+        <div class="blog-projects">
+
+          <div class="blog-projects-card">
+            <img src="./src/img/blog-1.jpg" alt="">
+            <div class="blog-card-wrap">
+              <h3 class="blog-card-wrap__title">
+                Проєкт “Українське сонце”
+              </h3>
+
+              <ul class="blog-list">
+                <li class="blog-list__item">Українська народна культура, народні і сучасні пісні;</li>
+                <li class="blog-list__item">танці, музика, художнє читання;</li>
+                <li class="blog-list__item">майстер класи народних ремесел від жінок;</li>
+                <li class="blog-list__item">та інші культурні проекти.</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="blog-projects-card">
+            <img src="./src/img/blog-2.jpg" alt="">
+            <div class="blog-card-wrap">
+              <h3 class="blog-card-wrap__title">
+                Допомога народу України
+              </h3>
+
+              <ul class="blog-list">
+                <li class="blog-list__item">допомога юриста;</li>
+                <li class="blog-list__item">допомога з реабілітації поранених:</li>
+                <li class="blog-list__item">допомога по господарству;</li>
+                <li class="blog-list__item">психологічна допомога та інші;</li>
+                <li class="blog-list__item">допомога дітям;</li>
+                <li class="blog-list__item">допомога переселенцям.</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="blog-projects-card">
+            <img src="./src/img/blog-3.jpg" alt="">
+            <div class="blog-card-wrap">
+              <h3 class="blog-card-wrap__title">
+                Мова – це наша зброя!
+              </h3>
+
+              <ul class="blog-list">
+                <li class="blog-list__item">патріотичний проект “Я Українка”</li>
+                <li class="blog-list__item">знайомство з лідерами та відомими особистостями;</li>
+                <li class="blog-list__item">літературні читання.</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="blog-projects-card">
+            <img src="./src/img/blog-4.jpg" alt="">
+            <div class="blog-card-wrap">
+              <h3 class="blog-card-wrap__title">
+                Духовне багацтво
+              </h3>
+
+              <ul class="blog-list">
+                <li class="blog-list__item">Божественість;</li>
+                <li class="blog-list__item">Духовність, любов до життя;</li>
+                <li class="blog-list__item">Голос Бога – може врятувати кожного.</li>
+              </ul>
+
+            </div>
+          </div>
+
+          <div class="blog-projects-card">
+            <img src="./src/img/blog-5.jpg" alt="">
+            <div class="blog-card-wrap">
+              <h3 class="blog-card-wrap__title">
+                “Українське сонце”
+              </h3>
+
+              <ul class="blog-list">
+                <li class="blog-list__item">робота з дітьми та підлітками від 3 років і до 14 років;</li>
+                <li class="blog-list__item">навчання першої медичної допомоги;</li>
+                <li class="blog-list__item">патріотичний рух для молоді та інші заходи.</li>
+              </ul>
+
+            </div>
+          </div>
+
+          <div class="blog-projects-card">
+            <img src="./src/img/blog-6.jpg" alt="">
+            <div class="blog-card-wrap">
+              <h3 class="blog-card-wrap__title">
+                Народний Рух України
+              </h3>
+
+              <ul class="blog-list">
+                <li class="blog-list__item">Політичний Рух Україні</li>
+                <li class="blog-list__item">Україна починається з тебе;</li>
+                <li class="blog-list__item">Ми Українці – вільні люди;</li>
+                <li class="blog-list__item">Все Буде Україна!</li>
+              </ul>
+
+            </div>
+          </div>
+
+          <div class="blog-projects-card">
+            <img src="./src/img/blog-7.jpg" alt="">
+            <div class="blog-card-wrap">
+              <h3 class="blog-card-wrap__title">
+                “Бойове братерство України”
+              </h3>
+
+              <ul class="blog-list">
+                <li class="blog-list__item">Всеукраїнська спілка воїнів, безпосередніх учасників російсько-української
+                  війни: бойових офіцерів, солдатів, добровольців, волонтерів і капеланів, які мають прагнення та честь
+                  бути відданими Україні та служити інтересам її народу.</li>
+                <li class="blog-list__item">З нами Бог і Україна</li>
+                <li class="blog-list__item">Вольності, можливості і заможності</li>
+              </ul>
+
+            </div>
+          </div>
+
+          <div class="blog-projects-card">
+            <img src="./src/img/blog-8.jpg" alt="">
+            <div class="blog-card-wrap">
+              <h3 class="blog-card-wrap__title">
+                Санаторій “Райдуга”
+              </h3>
+
+              <ul class="blog-list">
+                <li class="blog-list__item">Реабілітація хворих опорно-рухового апарату</li>
+                <li class="blog-list__item">Відпочинково-оздоровчий комплекс</li>
+                <li class="blog-list__item">сторінка санаторію</li>
+              </ul>
+
+            </div>
+          </div>
+
+        </div>
+      </div>
     </secton>
-    <div class="container"></div>
+
+    <section class="materials">
+      <div class="container">
+        <h2 class="materials__title">Матеріали</h2>
+
+        <ul class="materials-list">
+          <li class="materials-list-item">
+
+            <img src="./src/img/materials.jpg" alt="">
+
+            <div class="materials-list-item__wrap">
+              <h3 class="materials-list-item__title">
+                Поїздка на Запоріжжя: поїздка для підтримки наших військових
+              </h3>
+
+              <p class="materials-list-item__descr">
+                Безумовно, допомога військовим - це критичний аспект підтримки та визнання важливості служби, яку вони
+                надають для захисту країни та її мешканців. Часто громадські організації відіграють ключову роль у
+                наданні
+                підтримки військовим, які повертаються з військової служби або переживають труднощі під час служби.
+              </p>
+
+              <div class="data-wrap">
+                <div class="data">
+                  06 листопада 2023, 13:44
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="materials-list-item">
+
+            <img src="./src/img/materials.jpg" alt="">
+
+            <div class="materials-list-item__wrap">
+              <h3 class="materials-list-item__title">
+                Поїздка на Запоріжжя: поїздка для підтримки наших військових
+              </h3>
+
+              <p class="materials-list-item__descr">
+                Безумовно, допомога військовим - це критичний аспект підтримки та визнання важливості служби, яку вони
+                надають для захисту країни та її мешканців. Часто громадські організації відіграють ключову роль у
+                наданні
+                підтримки військовим, які повертаються з військової служби або переживають труднощі під час служби.
+              </p>
+
+              <div class="data-wrap">
+                <div class="data">
+                  06 листопада 2023, 13:44
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="materials-list-item">
+
+            <img src="./src/img/materials.jpg" alt="">
+
+            <div class="materials-list-item__wrap">
+              <h3 class="materials-list-item__title">
+                Поїздка на Запоріжжя: поїздка для підтримки наших військових
+              </h3>
+
+              <p class="materials-list-item__descr">
+                Безумовно, допомога військовим - це критичний аспект підтримки та визнання важливості служби, яку вони
+                надають для захисту країни та її мешканців. Часто громадські організації відіграють ключову роль у
+                наданні
+                підтримки військовим, які повертаються з військової служби або переживають труднощі під час служби.
+              </p>
+
+              <div class="data-wrap">
+                <div class="data">
+                  06 листопада 2023, 13:44
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="materials-list-item">
+
+            <img src="./src/img/materials.jpg" alt="">
+
+            <div class="materials-list-item__wrap">
+              <h3 class="materials-list-item__title">
+                Поїздка на Запоріжжя: поїздка для підтримки наших військових
+              </h3>
+
+              <p class="materials-list-item__descr">
+                Безумовно, допомога військовим - це критичний аспект підтримки та визнання важливості служби, яку вони
+                надають для захисту країни та її мешканців. Часто громадські організації відіграють ключову роль у
+                наданні
+                підтримки військовим, які повертаються з військової служби або переживають труднощі під час служби.
+              </p>
+
+              <div class="data-wrap">
+                <div class="data">
+                  06 листопада 2023, 13:44
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="materials-list-item">
+
+            <img src="./src/img/materials.jpg" alt="">
+
+            <div class="materials-list-item__wrap">
+              <h3 class="materials-list-item__title">
+                Поїздка на Запоріжжя: поїздка для підтримки наших військових
+              </h3>
+
+              <p class="materials-list-item__descr">
+                Безумовно, допомога військовим - це критичний аспект підтримки та визнання важливості служби, яку вони
+                надають для захисту країни та її мешканців. Часто громадські організації відіграють ключову роль у
+                наданні
+                підтримки військовим, які повертаються з військової служби або переживають труднощі під час служби.
+              </p>
+
+              <div class="data-wrap">
+                <div class="data">
+                  06 листопада 2023, 13:44
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="materials-list-item">
+
+            <img src="./src/img/materials.jpg" alt="">
+
+            <div class="materials-list-item__wrap">
+              <h3 class="materials-list-item__title">
+                Поїздка на Запоріжжя: поїздка для підтримки наших військових
+              </h3>
+
+              <p class="materials-list-item__descr">
+                Безумовно, допомога військовим - це критичний аспект підтримки та визнання важливості служби, яку вони
+                надають для захисту країни та її мешканців. Часто громадські організації відіграють ключову роль у
+                наданні
+                підтримки військовим, які повертаються з військової служби або переживають труднощі під час служби.
+              </p>
+
+              <div class="data-wrap">
+                <div class="data">
+                  06 листопада 2023, 13:44
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="materials-list-item">
+
+            <img src="./src/img/materials.jpg" alt="">
+
+            <div class="materials-list-item__wrap">
+              <h3 class="materials-list-item__title">
+                Поїздка на Запоріжжя: поїздка для підтримки наших військових
+              </h3>
+
+              <p class="materials-list-item__descr">
+                Безумовно, допомога військовим - це критичний аспект підтримки та визнання важливості служби, яку вони
+                надають для захисту країни та її мешканців. Часто громадські організації відіграють ключову роль у
+                наданні
+                підтримки військовим, які повертаються з військової служби або переживають труднощі під час служби.
+              </p>
+
+              <div class="data-wrap">
+                <div class="data">
+                  06 листопада 2023, 13:44
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="materials-list-item">
+
+            <img src="./src/img/materials.jpg" alt="">
+
+            <div class="materials-list-item__wrap">
+              <h3 class="materials-list-item__title">
+                Поїздка на Запоріжжя: поїздка для підтримки наших військових
+              </h3>
+
+              <p class="materials-list-item__descr">
+                Безумовно, допомога військовим - це критичний аспект підтримки та визнання важливості служби, яку вони
+                надають для захисту країни та її мешканців. Часто громадські організації відіграють ключову роль у
+                наданні
+                підтримки військовим, які повертаються з військової служби або переживають труднощі під час служби.
+              </p>
+
+              <div class="data-wrap">
+                <div class="data">
+                  06 листопада 2023, 13:44
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="materials-list-item">
+
+            <img src="./src/img/materials.jpg" alt="">
+
+            <div class="materials-list-item__wrap">
+              <h3 class="materials-list-item__title">
+                Поїздка на Запоріжжя: поїздка для підтримки наших військових
+              </h3>
+
+              <p class="materials-list-item__descr">
+                Безумовно, допомога військовим - це критичний аспект підтримки та визнання важливості служби, яку вони
+                надають для захисту країни та її мешканців. Часто громадські організації відіграють ключову роль у
+                наданні
+                підтримки військовим, які повертаються з військової служби або переживають труднощі під час служби.
+              </p>
+
+              <div class="data-wrap">
+                <div class="data">
+                  06 листопада 2023, 13:44
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="materials-list-item">
+
+            <img src="./src/img/materials.jpg" alt="">
+
+            <div class="materials-list-item__wrap">
+              <h3 class="materials-list-item__title">
+                Поїздка на Запоріжжя: поїздка для підтримки наших військових
+              </h3>
+
+              <p class="materials-list-item__descr">
+                Безумовно, допомога військовим - це критичний аспект підтримки та визнання важливості служби, яку вони
+                надають для захисту країни та її мешканців. Часто громадські організації відіграють ключову роль у
+                наданні
+                підтримки військовим, які повертаються з військової служби або переживають труднощі під час служби.
+              </p>
+
+              <div class="data-wrap">
+                <div class="data">
+                  06 листопада 2023, 13:44
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="materials-list-item">
+
+            <img src="./src/img/materials.jpg" alt="">
+
+            <div class="materials-list-item__wrap">
+              <h3 class="materials-list-item__title">
+                Поїздка на Запоріжжя: поїздка для підтримки наших військових
+              </h3>
+
+              <p class="materials-list-item__descr">
+                Безумовно, допомога військовим - це критичний аспект підтримки та визнання важливості служби, яку вони
+                надають для захисту країни та її мешканців. Часто громадські організації відіграють ключову роль у
+                наданні
+                підтримки військовим, які повертаються з військової служби або переживають труднощі під час служби.
+              </p>
+
+              <div class="data-wrap">
+                <div class="data">
+                  06 листопада 2023, 13:44
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="materials-list-item">
+
+            <img src="./src/img/materials.jpg" alt="">
+
+            <div class="materials-list-item__wrap">
+              <h3 class="materials-list-item__title">
+                Поїздка на Запоріжжя: поїздка для підтримки наших військових
+              </h3>
+
+              <p class="materials-list-item__descr">
+                Безумовно, допомога військовим - це критичний аспект підтримки та визнання важливості служби, яку вони
+                надають для захисту країни та її мешканців. Часто громадські організації відіграють ключову роль у
+                наданні
+                підтримки військовим, які повертаються з військової служби або переживають труднощі під час служби.
+              </p>
+
+              <div class="data-wrap">
+                <div class="data">
+                  06 листопада 2023, 13:44
+                </div>
+              </div>
+            </div>
+          </li>
+        </ul>
+
+        <!-- pagination -->
+      </div>
+    </section>
+
   </main>
 
   <footer class="footer">
