--- a/blog.html
+++ b/blog.html
@@ -384,6 +384,7 @@
           </div>
 
         </div>
+
       </div>
     </section>
 
@@ -670,8 +671,28 @@
           </li>
         </ul>
 
-        <!-- pagination -->
+        <ul class="pagination">
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon-left" width="24" height="24" viewBox="0 0 24 24" fill="none">
+            <path d="M14 7L9 12L14 17" stroke="#080808" stroke-linecap="round" stroke-linejoin="round" />
+          </svg>
+          <li class="pagination-item pagination-item-first">
+            <a class="pagination-item__link" href="">1</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-item__link" href="">2</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-item__link" href="">3</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-item__link" href="">4</a>
+          </li>
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon-right" width="24" height="24" viewBox="0 0 24 24" fill="none">
+            <path d="M10 17L15 12L10 7" stroke="#080808" stroke-linecap="round" stroke-linejoin="round" />
+          </svg>
+        </ul>
       </div>
+
     </section>
 
   </main>
