--- a/im-Ukranian.html
+++ b/im-Ukranian.html
@@ -14,7 +14,7 @@
 
   <link rel="stylesheet" href="./src/styles/hamburgers.css">
   <link rel="stylesheet" href="./dist/main.css">
-  <title>way-to-health</title>
+  <title>Я Українка</title>
 </head>
 
 <body>
@@ -89,7 +89,7 @@
 
       <nav class="nav">
         <a class="nav__link" href="./index.html">Головна</a>
-        <a class="nav__link" href="./im-Ukranian.html">Я Українка</a>
+        <a class="nav__link" href="">Я Українка</a>
         <a class="nav__link" href="./blog.html">Блог</a>
         <a class="nav__link" href="">Контакти</a>
         <a class="nav__link" href="">Про нас</a>
@@ -221,229 +221,71 @@
     </div>
   </header>
 
-  <main>
-    <!-- slider -->
-    <div class="swiper">
-      <!-- Additional required wrapper -->
-      <div class="swiper-wrapper">
-        <!-- Slides -->
-        <div class="swiper-slide">
-          <img src="./src/img/banner1.png" alt="">
-          <div class="slide-text">
-            <h2>Ми віримо, що зміни починаються з усіх нас!</h2>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <img src="./src/img/banner2.png" alt="">
-          <div class="slide-text">
-            <h2>Українці - вільні люди: дізнайтесь детальніше про наш проєкт</h2>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <div style="position: relative;">
-            <img src="./src/img/banner3.png" alt="">
-            <div class="slide-text">
-              <h2>“Шлях до здоров’я” збирає на допомогу з реабілітації поранених</h2>
-              <a href="донат Way for pay">донат Way for pay</a>
-            </div>
-
-          </div>
-        </div>
+  <div class="breadcrumbs">
+    <div class="content">
+      <div class="breadcrumbs-wrap">
+        <a class="breadcrumbs-link" href="./index.html">Головна</a>
+        <div class="breadcrumbs-wrap__seperator">\</div>
+        <a class="breadcrumbs-link" href="./im-Ukranian.html">Я Українка</a>
       </div>
-      <!-- If we need pagination -->
-      <div class="swiper-pagination"></div>
-
-      <!-- If we need navigation buttons -->
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-button-next"></div>
-
     </div>
+  </div>
 
-    <section class="info container">
-      <div class="info-wrap">
-        <h2 class="info-title">Громадська організація “Шлях до Здоров’я”</h2>
-        <p class="info-descr">Ми - громадська організація, що віддана меті здорового життя
-          та благополуччя нашої спільноти. Наша місія полягає в тому, щоб кожна людина мала доступ до інформації,
-          ресурсів
-          та підтримки, необхідних для збереження та покращення свого фізичного
-          та психічного здоров'я.</p>
-        <div class="btns">
-          <a class="info-btn" href="">Дізнатись більше</a>
-          <a class="info-btn" href="">Підтримати нас</a>
+  <main>
+
+    <section class="project">
+      <div class="container">
+        <h1 class="project__title">Проєкт “Я Українка”</h1>
+        <div class="project-wrap">
+          <p class="project__descr">“Я Українка!” це один з наших головних культурних проектів. Ми проводимо патріотичні
+            та культурні заходи в
+            рамках Всеукраїнського фестивалю “Я Українка!”.
+            Шлях до перемоги це наша мова, музика, пісня, вірш, слово.
+            Переможимо, не сумнівайтеся. Переможимо і не здавайтеся! Україна міцна держава! Слава Ураїні! Героям Слава!
+          </p>
+          <img src="./src/img/image-project.png" alt="">
         </div>
       </div>
     </section>
 
-    <section class="our-initiatives container">
-      <h2 class="our-initiatives__title">Наші ініціативи</h2>
-      <p class="our-initiatives__descr">Ми розробляємо та реалізуємо різноманітні програми
-        та проекти, спрямовані на покращення ситуації в галузі охорони здоров'я та благополуччя нашого суспільства.
-      </p>
-      <ul class="our-initiatives-list">
-        <li class="our-initiatives-list__item">
-          <img src="./src/img/ou1.jpg" alt="">
-          <div class="our-initiatives-card">
-            <h3 class="our-initiatives-card__title">
-              Проєкт “Українське сонце”
-            </h3>
-            <p class="our-initiatives-card__descr">Проводимо роботу з дітьми
-              та підлітками від 3 до 14 років, навчаємо
-              як надавати першу медичну допомогу, організовуємо патріотичний рух молоді.</p>
-          </div>
-        </li>
-        <li class="our-initiatives-list__item">
-          <img src="./src/img/ou2.jpg" alt="">
-          <div class="our-initiatives-card">
-            <h3 class="our-initiatives-card__title">
-              Проєкт “Я Українка”
-            </h3>
-            <p class="our-initiatives-card__descr"> Це один з наших головних культурних проектів. Ми проводимо
-              патріотичні та культурні заходи в рамках Всеукраїнського фестивалю “Я Українка!” </p>
-          </div>
-        </li>
-        <li class="our-initiatives-list__item">
-          <img src="./src/img/ou3.jpg" alt="">
-          <div class="our-initiatives-card">
-            <h3 class="our-initiatives-card__title">
-              Допомога народу України
-            </h3>
-            <p class="our-initiatives-card__descr">Ми надаємо юридичні послуги, допомога з реабілітації поранених,
-              допомога по господарству, психологічна
-              допомога.</p>
-          </div>
-        </li>
-      </ul>
-      <a class="btn btn-all-projects" href="#">Всі проєкти</a>
-    </section>
-
-    <section class="quotes container">
-      <figure class="quotes-wrap">
-        <q class="quotes-text">
-          &#8220;Тільки тепер я зрозуміла слова Лесі Українки…
-          Щоб не плакати, Я сміялася…&#8221;
-        </q>
-        <div class="author-wrap">
-          <div class="author">Леся Українка</div>
-          <div class="author-text">Українська поетеса</div>
-        </div>
-      </figure>
-    </section>
-
-    <section class="activity">
+    <section class="photos">
       <div class="container">
-        <ul class="activity-list">
-          <li class="activity-list__item">
-            <h3 class="activity-list-title">Історія початку нашої діяльності</h3>
-            <p class="activity-list-descr">Німцович Ємілія Сергіївна в 2014 р. заснувала Г. О. В. О. «Шлях до здорв’я»,
-              працювала
-              керівником, допомагала хворим у відновлені здоров’я.</p>
-            <span><a class="btn btn-more" href="">Дізнатись більше</a></span>
+        <ul class="photos-list">
+          <li class="photos-list__item">
+            <img class="photos-list__photo" src="./src/img/pic1.jpg" alt="">
+            <p class="photos-list__descr">Опис фото</p>
           </li>
-          <li class="activity__list-item">
-            <img src="./src/img/activity.jpg" alt="">
+          <li class="photos-list__item">
+            <img class="photos-list__photo" src="./src/img/pic2.jpg" alt="">
+            <p class="photos-list__descr">Опис фото</p>
+          </li>
+          <li class="photos-list__item">
+            <img class="photos-list__photo" src="./src/img/pic3.jpg" alt="">
+            <p class="photos-list__descr">Опис фото</p>
           </li>
         </ul>
       </div>
     </section>
 
-    <section class="requisites">
+    <section class="quotes quotes-distance">
       <div class="container">
-        <div class="requisites-container">
-          <h3 class="requisites-container__title">Також ви можете підтримати нас фінансово</h3>
-          <p class="requisites-container__descr">Ви можете поповнити банку або скопіювати реквізити
-            та виконати переказ коштів через банк.
-            Для копіювання реквізитів натискайте на іконки.</p>
-        </div>
-        <div class="requisites-wrap">
-
-          <ul class="requisites-content">
-            <span>Реквізити</span>
-            <li class="requisites-content-item">
-              <p class="requisites-content-item__desc">Найменування одержувача:</p>
-              <div class="requisites-content-item__container">
-                <h5 class="requisites-content-item__info">
-                  <svg class="requisites-content-item__icon" width="26px" height="26px">
-                    <use xlink:href="./icons.svg#icon-copy"></use>
-                  </svg>
-                  ГО “Шлях до здоров’я”
-                </h5>
-              </div>
-            </li>
-
-            <li class="requisites-content-item">
-              <p class="requisites-content-item__desc">Код отримувача ЄДРПОУ:</p>
-              <div class="requisites-content-item__container">
-                <h5 class="requisites-content-item__info">
-                  <svg class="requisites-content-item__icon" width="24px" height="24px">
-                    <use xlink:href="./icons.svg#icon-copy"></use>
-                  </svg>
-                  56789976
-                </h5>
-              </div>
-            </li>
-
-            <li class="requisites-content-item">
-              <p class="requisites-content-item__desc">Рахунок в “Приватбанку” (IBAN):</p>
-              <div class="requisites-content-item__container">
-                <h5 class="requisites-content-item__info">
-                  <svg class="requisites-content-item__icon" width="24px" height="24px">
-                    <use xlink:href="./icons.svg#icon-copy"></use>
-                  </svg>
-                  UA383052990000026005015565678
-                </h5>
-              </div>
-            </li>
-
-            <li class="requisites-content-item">
-              <p class="requisites-content-item__desc">Рахунок в “Ощадбанку” (IBAN):</p>
-              <div class="requisites-content-item__container">
-                <h5 class="requisites-content-item__info">
-                  <svg class="requisites-content-item__icon" width="24px" height="24px">
-                    <use xlink:href="./icons.svg#icon-copy"></use>
-                  </svg>
-                  UA383052990000026005015565678
-                </h5>
-              </div>
-            </li>
-
-            <li class="requisites-content-item">
-              <p class="requisites-content-item__desc">Призначення платежу:</p>
-              <div class="requisites-content-item__container">
-                <h5 class="requisites-content-item__info">
-                  <svg class="requisites-content-item__icon" width="24px" height="24px">
-                    <use xlink:href="./icons.svg#icon-copy"></use>
-                  </svg>
-                  Благодійна допомога
-                </h5>
-              </div>
-            </li>
-          </ul>
-
-          <ul class="requisites-content">
-            <span>Банка</span>
-            <li class="requisites-content-item">
-              <p class="requisites-content-item__desc">Посилання на банку:</p>
-              <div class="requisites-content-item__container">
-                <h5 class="requisites-content-item__info -padding">
-                  <a href="send.mobobank">send.mobobank</a>
-                </h5>
-              </div>
-            </li>
-            <li class="requisites-content-item">
-              <p class="requisites-content-item__desc">Номер карти:</p>
-              <div class="requisites-content-item__container">
-                <h5 class="requisites-content-item__info">
-                  <svg class="requisites-content-item__icon" width="24px" height="24px">
-                    <use xlink:href="./icons.svg#icon-copy"></use>
-                  </svg>
-                  5678 8900 7656 7866
-                </h5>
-              </div>
-            </li>
-          </ul>
-        </div>
+        <figure class="quotes-wrap wrap-quotes">
+          <q class="quotes-text">
+            &#8220;Прийдіть і подивіться!
+            Які ж вони красиві і талановиті українські жінки!
+            Від маленьких дівчаток, жінок, стареньких бабусь!Скільки в них любові, світла і добра!
+            А які вони майстрині!
+            Так! Українська жінка не тільки родоначальниця свого роду, а й оберіг для майбутніх поколінь!Прийдіть і
+            подивіться!&#8221;
+          </q>
+          <div class="author-wrap">
+            <div class="author">Ємілія Німцова</div>
+            <div class="author-text">Президент фестивалю</div>
+          </div>
+        </figure>
       </div>
     </section>
+
   </main>
 
   <footer class="footer">
